--- a/service_chat/package.json
+++ b/service_chat/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "atob": "^2.1.2",
+    "bcrypt": "^5.0.0",
+    "crypto-js": "^4.0.0",
     "dateformat": "^4.5.1",
     "express": "^4.15.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.8.2",
+    "node-bcrypt": "0.0.1",
     "socket.io": "^2.0.1",
     "socketio-jwt": "^4.6.2"
   },
